Added sidenav and top nav
Added sidenav and top nav. Also installed standard

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<p>
-  Hi {{name}}
-  <button (click)="signout()">Signout</button>
-</p>
+<app-sidenav></app-sidenav>
+<div class="dashboard-section">
+  {{name}}
+</div>
