Started working on front-end of Issues section
Completed front-end of Issues section with 8% completion

--- a/src/app/components/issues/issues.component.html
+++ b/src/app/components/issues/issues.component.html
@@ -1,4 +1,32 @@
 <app-sidenav></app-sidenav>
-<div class="issues-section">
-  {{name}} issues
-</div>
+<section class="issues-section">
+  <div class="banner">
+    <div class="banner-item">
+      
+      <div class='section-title'>
+        <i class="material-icons">announcement</i> <span>Issues</span>
+      </div>
+
+      <div class="issue-search">
+        <div class="input-wrapper">
+          <i class="material-icons">search</i>
+          <input type="text" placeholder="Search for an issue">
+        </div>  
+      </div>
+
+    </div>
+
+    <div class="issue-main">
+      <div class="issue-add-container">
+        <button md-raised-button color="accent">ADD ISSUE</button>
+      </div>
+
+       <div class="issue-list-container">
+        <md-toolbar>Yow</md-toolbar>
+      </div> 
+    </div>
+
+
+
+  </div>
+</section>
