--- a/src/app/components/issues/issues.component.css
+++ b/src/app/components/issues/issues.component.css
@@ -1,3 +1,92 @@
-.issues-section{
-    margin-left: 240px;
+.issues-section {
+  margin-left: 240px;
+  margin-top: 64px;
+}
+
+.banner {
+  background: url(/assets/img/bg-home.jpg) no-repeat center;
+  background-size: cover;
+  height: 200px;
+  width: 100%;
+}
+
+.banner-item {
+  display: flex;
+  align-items: center;
+  height: 100%;
+}
+
+.section-title {
+  font-size: 24px;
+  color: #fff;
+  height: 100%;
+  padding: 60px;
+  display: flex;
+  align-items: center;
+}
+
+.section-title span {
+  margin-left: 10px;
+}
+
+.issue-search {
+  height: 100%;
+  padding: 24px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex: 1;
+}
+
+.input-wrapper {
+  background: #fff;
+  padding: 18px;
+  height: 56px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  box-shadow: 0 2px 4px -1px rgba(0,0,0,.2), 0 4px 5px 0 rgba(0,0,0,.14), 0 1px 10px 0 rgba(0,0,0,.12)
+}
+
+.input-wrapper input {
+  width: 100%;
+  border: none;
+  outline: none;
+  color: #8a8a8a;
+  font-family: "Roboto", sans-serif;
+  font-size: 13px;
+  padding-left: 16px;
+}
+
+.input-wrapper i {
+  color: #8a8a8a;
+}
+
+.issue-main {
+  display: flex;
+  align-items: center;
+  /* height: 100%; */
+}
+
+.issue-add-container {
+  /* color: #fff; */
+  /* background: cornflowerblue; */
+  padding: 25px 60px;
+}
+
+.issue-list-container {
+   padding: 24px; 
+  /* height: 56px; */
+  flex: 1;
+  display: flex;
+  align-items: center;
+}
+.issue-list-container .mat-toolbar {
+    font-size: 13px;
+    color: #5f5f5f;
+    background: #fff;
+    box-shadow: 0 4px 5px -2px rgba(0,0,0,.2), 0 7px 10px 1px rgba(0,0,0,.14), 0 2px 16px 1px rgba(0,0,0,.12);
+}
+.issue-list-container .mat-toolbar-row {
+    padding: 18px;
 }
