--- a/src/app/components/issues/issues.component.css
+++ b/src/app/components/issues/issues.component.css
@@ -20,9 +20,8 @@
   font-size: 24px;
   color: #fff;
   height: 100%;
-  padding: 60px;
+  padding: 35px;
   display: flex;
-  align-items: center;
 }
 
 .section-title span {
@@ -31,10 +30,11 @@
 
 .issue-search {
   height: 100%;
-  padding: 24px;
+  padding: 24px 24px 0 24px;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  justify-content: space-between;
+  flex-direction: column;
+  align-items: flex-end;
   flex: 1;
 }
 
@@ -45,7 +45,7 @@
   width: 100%;
   display: flex;
   align-items: center;
-  box-shadow: 0 2px 4px -1px rgba(0,0,0,.2), 0 4px 5px 0 rgba(0,0,0,.14), 0 1px 10px 0 rgba(0,0,0,.12)
+  box-shadow: 0 2px 4px -1px rgba(0, 0, 0, .2), 0 4px 5px 0 rgba(0, 0, 0, .14), 0 1px 10px 0 rgba(0, 0, 0, .12)
 }
 
 .input-wrapper input {
@@ -65,28 +65,25 @@
 .issue-main {
   display: flex;
   align-items: center;
-  /* height: 100%; */
 }
 
 .issue-add-container {
-  /* color: #fff; */
-  /* background: cornflowerblue; */
-  padding: 25px 60px;
+   padding: 35px; 
 }
 
 .issue-list-container {
-   padding: 24px; 
-  /* height: 56px; */
-  flex: 1;
+  width: 100%;
   display: flex;
   align-items: center;
 }
+
 .issue-list-container .mat-toolbar {
-    font-size: 13px;
-    color: #5f5f5f;
-    background: #fff;
-    box-shadow: 0 4px 5px -2px rgba(0,0,0,.2), 0 7px 10px 1px rgba(0,0,0,.14), 0 2px 16px 1px rgba(0,0,0,.12);
+  font-size: 13px;
+  color: #5f5f5f;
+  background: #fff;
+  box-shadow: 0 4px 5px -2px rgba(0, 0, 0, .2), 0 7px 10px 1px rgba(0, 0, 0, .14), 0 2px 16px 1px rgba(0, 0, 0, .12);
 }
+
 .issue-list-container .mat-toolbar-row {
-    padding: 18px;
+  padding: 18px;
 }
