--- a/src/app/components/issues/issues.component.html
+++ b/src/app/components/issues/issues.component.html
@@ -2,7 +2,7 @@
 <section class="issues-section">
   <div class="banner">
     <div class="banner-item">
-      
+
       <div class='section-title'>
         <i class="material-icons">announcement</i> <span>Issues</span>
       </div>
@@ -11,21 +11,20 @@
         <div class="input-wrapper">
           <i class="material-icons">search</i>
           <input type="text" placeholder="Search for an issue">
-        </div>  
+        </div>
+
+        <div class="issue-list-container">
+          <md-toolbar color="light">Yow</md-toolbar>
+        </div>
       </div>
 
     </div>
 
-    <div class="issue-main">
-      <div class="issue-add-container">
-        <button md-raised-button color="accent">ADD ISSUE</button>
-      </div>
-
-       <div class="issue-list-container">
-        <md-toolbar>Yow</md-toolbar>
-      </div> 
+  </div>
+  <div class="issue-main">
+    <div class="issue-add-container">
+      <button md-raised-button color="accent" (click)="addIssueModal()">ADD ISSUE</button>
     </div>
-
 
 
   </div>
