Added Add Issue functionality
Added Add Issue functionality but not showing yet in front end

--- a/src/app/components/issues/issues.component.html
+++ b/src/app/components/issues/issues.component.html
@@ -26,6 +26,12 @@
       <button md-raised-button color="accent" (click)="addIssueModal()">ADD ISSUE</button>
     </div>
 
+    <!-- <ul>
+      <li *ngFor="let issue of issues | async">
+        <div innerHTML="{{ issue.details }}"></div>
+      </li>
+    </ul> -->
+
 
   </div>
 </section>
