--- a/src/app/components/issues/issues.component.css
+++ b/src/app/components/issues/issues.component.css
@@ -23,8 +23,10 @@
   height: 100%;
   padding: 35px;
   display: flex;
-  width: 170px;
-  max-width: 170px;
+  align-items: center;
+  justify-content: center;
+  width: 220px;
+  max-width: 220px;
 }
 
 .section-title span {
@@ -82,6 +84,35 @@
   padding: 18px;
 }
 
+.select-item-trigger{
+  background-color: #fff;
+  box-shadow: none;
+  color: rgb(51, 51, 51);
+}
+
+.select-opts-container {
+  display: flex;
+}
+
+.toolbar-separator {
+  height: 48px;
+  width: 1px;
+  border-right: 1px solid rgba(0,0,0,.12);
+  margin: 0 12px;
+
+}
+
+.select-icon-btn {
+  margin: 0 8px;
+  background: #fff;
+  box-shadow: none;
+}
+
+.select-action-icon {
+  font-size: 20px;
+  line-height: 35px;
+  vertical-align: top;
+}
 
 /*  */
 
@@ -98,15 +129,19 @@
 
 .issue-add-container {
   padding: 35px;
-  width: 170px;
-  max-width: 170px;
+  width: 100%;
+  max-width: 220px;
+}
+
+.add-issue-btn {
+  display: block;
+  margin: 0 auto;
 }
 
 .issue-item-wrapper {
   height: 100%;
   overflow: auto;
   margin: 0 24px 0 0;
-  width: 100%;
   box-shadow: 0 4px 5px rgba(0, 0, 0, .2), 0 7px 10px rgba(0, 0, 0, .14), 0 2px 16px rgba(0, 0, 0, .12);
 }
 
