--- a/src/app/components/issues/issues.component.html
+++ b/src/app/components/issues/issues.component.html
@@ -14,24 +14,39 @@
         </div>
 
         <div class="issue-list-container">
-          <md-toolbar color="light">Yow</md-toolbar>
+          <md-toolbar color="light">
+            <md-checkbox [(ngModel)]="triggerSelectOpts"></md-checkbox>
+            <button class='select-item-trigger' md-mini-fab [mdMenuTriggerFor]="selectMenu"><md-icon>arrow_drop_down</md-icon></button>
+            <md-menu #selectMenu="mdMenu">
+              <button md-menu-item class='issue-menu' (click)="selectAll()">All</button>
+              <button md-menu-item class='issue-menu' (click)="selectToday()">Today</button>
+              <button md-menu-item class='issue-menu' (click)="selectResolved()">Resolved</button>
+              <button md-menu-item class='issue-menu' (click)="selectLow()">Low Priority</button>
+              <button md-menu-item class='issue-menu' (click)="selectMid()">Medium Priority</button>
+              <button md-menu-item class='issue-menu' (click)="selectHigh()">High Priority</button>
+            </md-menu>
+            <div *ngIf="triggerSelectOpts||selectedIssue" class='select-opts-container'>
+              <div class='toolbar-separator'></div>
+              <button class='select-icon-btn' md-raised-button><md-icon class='select-action-icon'>delete</md-icon> Delete selected</button>
+              <button class='select-icon-btn' md-raised-button><md-icon class='select-action-icon'>archive</md-icon> Archive selected</button>
+            </div>
+          </md-toolbar>
         </div>
-      </div>
-
+      </div>    
     </div>
 
   </div>
   <div class="issue-main">
     <div class="issue-main-item">
       <div class="issue-add-container">
-        <button md-raised-button color="accent" (click)="addIssueModal()">ADD ISSUE</button>
+        <button md-raised-button color="accent" class='add-issue-btn' (click)="addIssueModal()">ADD ISSUE</button>
       </div>
 
       <div class='issue-item-wrapper'>
         <div class="issue-item" *ngFor="let issue of issues?.reverse()">
           <div class='issue-filler' *ngIf="issue.archived === false">
             <div class="select-wrapper">
-              <md-checkbox value="{{ issue.$key }}"></md-checkbox>
+              <md-checkbox [checked]="triggerSelectOpts" value="{{ issue.$key }}"></md-checkbox>
             </div>
 
             <div class="issue-item-main">
